# ckb-cell-marketplace

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
contracts/market-item-type/: Cargo.toml
contracts/market-item-type/.cargo/: config.toml
contracts/market-item-type/src/: entry.rs  error.rs  main.rs
docs/: digital-land-mint-results.json  joyid-parse-ckb-raw-tx-null-deref.md
docs/benchmarks/: benchmark-2026-04-12.md
docs/superpowers/plans/: 2026-04-13-cellswap-frontend.md
docs/superpowers/specs/: 2026-04-13-cellswap-frontend-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  types.ts
frontend/src/components/: Browse.tsx  ContentRenderer.tsx  HtmlFullscreenViewer.tsx  ItemCard.tsx  ItemDetail.tsx  Layout.tsx  Library.tsx  ListItem.tsx  Mint.tsx  MyItems.tsx  ReportButton.tsx  Rules.tsx  TxConfirmModal.tsx  TxStatus.tsx  WalletButton.tsx
frontend/src/hooks/: useListings.ts  useMyItems.ts  usePrefs.ts
frontend/src/lib/: analytics.ts  ckbfs-resolver.ts  ckbfs.ts  codec.ts  content.ts  image.ts  indexer.ts  jidsdr.ts  transactions.ts  tx-send.ts  tx-summary.ts
frontend/src/moderation/: blocked.json  index.ts
schemas/: market_item.mol
scripts/: deploy-testnet.sh  deployment-default.toml  deployment.toml  mint-digital-land.js  mint-test-items.js
tests/: Cargo.toml
tests/src/: lib.rs
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
(+3 files in other folders)
